# Multi-Level-Resource-Detection-Plugin

./: README.md  pyproject.toml
src/MLRD/: __init__.py  discovery.py  input.py  plugin.py  resource.py
src/MLRD/utils/: MLPAMiner.py  process_area_discovery.py
src/plugin-template/: __init__.py  discovery.py  plugin.py  resource.py
src/plugin-template/utils/: MLPAMiner.py
