[project]
name = "resource_detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ocelescope",
    "pulp>=3.3.2",
]


[tool.uv.sources]
ocelescope = { git = "https://github.com/promi4s/ocelescope.git", subdirectory = "src/ocelescope" }
